# hic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: genhead.cmake
example/: main.cpp
src/: basecomponent.cpp  basecomponent.hpp  container.cpp  container.hpp  watchdog.cpp  watchdog.hpp
src/assets/: audio.cpp  audio.hpp  base.cpp  base.hpp  bitmap.cpp  bitmap.hpp  image.cpp  image.hpp  manager.cpp  manager.hpp  shader.cpp  shader.hpp  spritesheet.cpp  spritesheet.hpp
src/audio/: bus.cpp  bus.hpp  const.hpp  effect.hpp  manager.cpp  manager.hpp  stream.cpp  stream.hpp
src/utils/: animation.hpp  bmfont.hpp  easing.hpp  events.hpp  geometry.hpp  hicapi.hpp  logging.hpp  utf8.hpp  util.hpp
